changed ui,responses and logo

--- a/education.html
+++ b/education.html
@@ -52,6 +52,7 @@
           <p class="node-body terminal-block">
             &gt; Institution: Sacred Heart Convent Anglo Indian Higher Secondry School<br />
             &gt; Focus: Discipline and Knowledge<br />
+            &gt; Percentage: 75.4%<br />
             &gt; Status: Completed
           </p>
         </div>
@@ -68,6 +69,7 @@
           <p class="node-body terminal-block">
             &gt; Institution:  Sacred Heart Convent Anglo Indian Higher Secondry School<br />
             &gt; Focus: Academic Excellence and Skill Development<br />
+            &gt; Percentage: 82%<br />
             &gt; Status: Completed
           </p>
         </div>
@@ -84,6 +86,7 @@
           <p class="node-body terminal-block">
             &gt; Institution:  RMD Engineering College<br />
             &gt; Focus: Problem Solving and Skill Development<br />
+            &gt; cgpa: 7.99<br />
             &gt; Status: Current
           </p>
         </div>
