--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The Portal | The Upside Down Portfolio</title>
+  <link rel="icon" type="image/x-icon" href="./img/logo.png">
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <script defer src="scripts.js"></script>
@@ -35,7 +36,7 @@
   <!-- Hero Section -->
   <header class="hero">
     <h1 class="hero-title">Hello,I'm Nethesh</h1>
-    <img src="profile.jpg" alt="My Profile Photo" class="profile-photo">
+    <img src="./img/profile.jpg" alt="My Profile Photo" class="profile-photo">
     <section class="about">
    
   
@@ -44,7 +45,7 @@
     </h3>
   </section>
 
-    <a href="assets/resume.pdf" class="cta-btn">Download Resume</a>
+    <a href="#" class="cta-btn">Download Resume</a>
   </header>
 
   <!-- About Me Section -->
