--- a/skills.html
+++ b/skills.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The Data Stream | Skills</title>
-    <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" type="image/x-icon" href="./img/logo.png">
+  <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <script defer src="scripts/nav.js"></script>
   <script defer src="scripts.js"></script>
